# lattice-cpp

./: .gitignore  CMakeLists.txt  LLM.md  README.md  go.mod  gpu_backend.go  lattice_test.go  lux-lattice.pc.in  ntt.go  params.go  ring.go  sampling.go
.github/workflows/: release.yml
cmake/: LuxLibrary.cmake
docs/: next.config.mjs  package-lock.json  package.json  source.config.ts  tailwind.config.js
docs/.source/: index.js  source.config.mjs
docs/app/: layout.config.tsx  layout.tsx  page.tsx
docs/content/docs/: index.mdx  meta.json
docs/content/docs/api/: c-api.mdx  go-bindings.mdx  meta.json
docs/content/docs/backends/: cpu.mdx  cuda.mdx  meta.json  metal.mdx
docs/content/docs/concepts/: meta.json  montgomery.mdx  ntt.mdx  ring.mdx  sampling.mdx
include/lux/lattice/: lattice.h
scripts/: install.sh
src/: lattice.cpp
src/metal/: metal_ntt.h  metal_ntt.mm
